Fixed CSS and made some minor readability adjustments to the first post.

--- a/static/css/layout.css
+++ b/static/css/layout.css
@@ -65,7 +65,6 @@ h6 { font-size: .75em;
 
 a:hover, a:active, a:focus {
   outline: 0;
-  text-decoration: underline;
 }
 
 header {
